--- a/realappearance.tex
+++ b/realappearance.tex
@@ -64,7 +64,7 @@
 
 According to a familiar story, analytic philosophy begins with a revolt against idealism, the rebellion beginning principally in Cambridge and subsequently spreading throughout the anglophone world. Like nativity stories generally, it is idealized and suits the purposes of those who would propound it. One problem with the story is that it does injustice to the variety of sources from which analytic philosophy, in its formative stages, drew. Even when we grant, as we must surely do, that among the sources of analytic philosophy, a reaction against idealism is both important and salient, it can seem parochial if not indeed provincial to see the revolt against idealism exclusively from the point of view of Cambridge. Importantly, roughly contemporaneously if not slightly before, doubts about idealism were circulating in Oxford. 
 
-While Cambridge realism was more influential, at least early on, Oxford realism has proved more resilient, ``a tradition despite itself'', as Travis wryly comments. Cambridge realists, such as \cite{Russell:1912uq}, \citet{Moore:1953nx}, and \citet{Price:1932fk}, maintained that perception affords us with a sensory mode of awareness and that we our knowledgeable of the mind-independent environment by being aware of that environment. They also maintained that \emph{all} sense experience, and not just perception, involves this sensory mode of awareness. Cambridge realists were thus committed to a kind of experiential monism (in Snowdon's \citeyear{Snowdon:2008oz} terminology): All sense experience involves, as part of its nature, a sensory mode of awareness. Even subject to illusion or hallucination, there is something of which one is aware. And with that, they were an application of the argument from illusion, or hallucination, or conflicting appearances away from immaterial sense data and a representative realism that tended, over time, to devolve into a form of phenomenalism. In contrast, the Oxford realists, Cook Wilson and Prichard, restricted sensory awareness to perception, thus avoiding experiential monism and its degenerative effects. 
+While Cambridge realism was more influential, at least early on, Oxford realism has proved more resilient, a ``tradition despite itself'', as \citet[xii]{Travis:1989to} wryly comments. Cambridge realists, such as \cite{Russell:1912uq}, \citet{Moore:1953nx}, and \citet{Price:1932fk}, maintained that perception affords us with a sensory mode of awareness and that we our knowledgeable of the mind-independent environment by being aware of that environment. They also maintained that \emph{all} sense experience, and not just perception, involves this sensory mode of awareness. Cambridge realists were thus committed to a kind of experiential monism (in Snowdon's \citeyear{Snowdon:2008oz} terminology): All sense experience involves, as part of its nature, a sensory mode of awareness. Even subject to illusion or hallucination, there is something of which one is aware. And with that, they were an application of the argument from illusion, or hallucination, or conflicting appearances away from immaterial sense data and a representative realism that tended, over time, to devolve into a form of phenomenalism. In contrast, the Oxford realists, Cook Wilson and early Prichard, restricted sensory awareness to perception, thus avoiding experiential monism and its degenerative effects. 
 
 Most contemporary analytic philosophers believe neither in sense data, representative realism, nor phenomenalism. While realistically inclined, these aspects of Cambridge realism have largely been abandoned. Instead of sense data, contemporary philosophers of perception are more likely to speak of accuracy conditions or the representational content of perception \citep[though see][]{Robinson:1994ms}. And while perception is deemed to have a representational content, they will insist that this is insufficient for a representative realism. Rather, one is directly aware of the environment by one's perception accurately representing that environment. Moreover, few remain with phenomenalist sympathies (though see \citealt{Foster:2000ny} and \citealt{Noe:2004fk}). Nevertheless, \citet{Putnam:1994kx} has suggested that this contemporary orthodoxy has perhaps more in common with the sense-data theory, representative realism, and phenomenalism than they care to admit. It struck Putnam, at least at the time of the Dewey Lectures, as insufficiently demanding by the standards of James' natural realism that he admired and, like Cambridge realism, ultimately unsustainable. Putnam cites the work of \citet{McDowell:1994am} as exemplifying a more robust and sustainable form of realism. McDowell is one of the more recent figures in the tradition of Oxford realism that has quietly persisted as minority position in epistemology and philosophy of perception. Thinkers in this tradition despite itself include \citet{Cook-Wilson:1926sf}, \citet{Prichard:1950tg}, \citet{Ryle:1949qr}, \citet{Austin:1946ao,Austin:1962lr}, \citet{Hinton:1973js}, and more recently, \citet{McDowell:1994am}, \citet{Williamson:2000lr}, and \citet{Travis:2008la}. As we shall see, Putnam's remarks in the Dewey Lectures are anticipated by Cook Wilson in his letter to Stout.
 
@@ -72,7 +72,7 @@ Farquharson in his \emph{Memoir} of Cook Wilson, reports the following anecdote:
 \begin{quote}
 	About ten men were present at the first informal class of that year. He was treating by request the Kantian paradox: `the mind makes nature, the material it does not make'. He paused in his familiar manner and bending forward looked fixedly in the face of a Balliol man in a ragged scholar's gown. He, supposing himself to be interrogated or in a spirit of mischief, blurted out: `But why shouldn't the table be there, just where we see it?' Silence attended the result. The professor sprang once in the air; said very fiercely indeed: `Why shouldn't it?' and then relapsed into reverie. The scholar never returned, but I have sometimes wondered whether the shock set Wilson determinedly to work clearing the path which after many days led him far from the idealist solution he then accepted or appeared to accept. (Farquharson, \emph{Memoir}, in \citealt[xix]{Cook-Wilson:1926sf})
 \end{quote}
-The anecdote is potentially apocryphal. That it takes the form of a conversion narrative can suggest this---though this is not the first conversion narrative in philosophy, consider the moral conversion that Kant undergoes upon reading Rousseau. The anecdote, apocryphal or no, usefully highlights two themes whose interconnections we shall be exploring. The first is the fundamental realist commitment, common to Cook Wilson and \citet{Moore:1903uo}, that the objects of knowledge are independent of our knowing them. The second is that, at least in propitious circumstances, perception can make us knowledgeable of its objects. The Balliol man in the ragged scholar's gown challenges Cook Wilson by suggesting that we can know that the table is there, independently of us. That is the fundamental realist commitment. But he also suggests that we can come to have knowledge of a world that exists independently of us in a certain way, by perceiving it. We can know that the table is there, \emph{just where we see it}. The question that we shall be pursuing is: What must perception be like, according to Cook Wilson, if it is to make us knowledgeable of a mind-independent subject matter? 
+The anecdote is potentially apocryphal. That it takes the form of a conversion narrative can suggest this---though this is not the first conversion narrative in philosophy, consider the moral conversion that Kant undergoes upon reading Rousseau. The anecdote, apocryphal or no, usefully highlights two themes whose interconnections we shall be exploring. The first is the fundamental realist commitment, common to Cook Wilson and \citet{Moore:1903uo}, that the objects of knowledge are independent of our knowledge of them. The second is that, at least in propitious circumstances, perception can make us knowledgeable of its objects. The Balliol man in the ragged scholar's gown challenges Cook Wilson by suggesting that we can know that the table is there, independently of us. That is the fundamental realist commitment. But he also suggests that we can come to have knowledge of a world that exists independently of us in a certain way, by perceiving it. We can know that the table is there, \emph{just where we see it}. The question that we shall be pursuing is: What must perception be like, according to Cook Wilson, if it is to make us knowledgeable of a mind-independent subject matter? 
 
 Our answer will be partial and provisional. This is partly because I want to focus exclusively on one important piece of evidence, a crucial passage in Cook Wilson's letter to Stout. But importantly, it could turn out that any answer must, by the very nature of the case, be partial and provisional, since Cook Wilson may not have completely thought through the implications of his realist epistemology for the philosophy of perception. Indeed, it is arguable, and I have argued elsewhere \citep{Kalderon:2010fk}, that the implications for the philosophy of perception only fully gets worked out by subsequent thinkers in this tradition, notably by \citet{Prichard:1938ve}, \citet{Austin:1962lr}, and \citet{Hinton:1973js}.
 
@@ -142,7 +142,7 @@ Cook Wilson's letter to Stout was written in response to Stout's \citeyearpar{St
 	
 	If we perceive some property of an object, there is presupposed on the one hand the property of the object as existing in its own account whether we perceive it or not; and as distinct from this, our act of perceiving or recognizing the nature of this property.
 	
-	This latter, the subjective act of ours, is sometimes spoken of from the side of the object as the \emph{appearance} of the object to us. This `appearance' then gets distinguished from the object, and that in itself is justified in so far as our subjective act of recognition of the object's nature is not the same kind as that nature. But next the \emph{appearance}, though properly the appear\emph{ing} of the object, gets to be looked upon as itself an object and the immediate object of consciousness, and being already, as we have seen, distinguished from the subject and related to our subjectivity, becomes, so to say, a merely subjective `object'---`appearance' in that sense. And s, as \emph{appearance} of the object, it has now to be represented not as the object but as some phenomenon caused in our consciousness by the object. Thus for the true appearance (= appearing) to us of the \emph{object} is substituted through the `objectification' of the appearing as appearance, the appearing to us of an \emph{appearance}, the appearing of a phenomenon caused in us by the object. (The thing to emphasize on the contrary is that the so-called appearance is the appearing of the \emph{object}, that is, we have the nature of the object before us and not only some affection of our consciousness produced by it.)
+	This latter, the subjective act of ours, is sometimes spoken of from the side of the object as the \emph{appearance} of the object to us. This `appearance' then gets distinguished from the object, and that in itself is justified in so far as our subjective act of recognition of the object's nature is not the same kind as that nature. But next the \emph{appearance}, though properly the appear\emph{ing} of the object, gets to be looked upon as itself an object and the immediate object of consciousness, and being already, as we have seen, distinguished from the subject and related to our subjectivity, becomes, so to say, a merely subjective `object'---`appearance' in that sense. And so, as \emph{appearance} of the object, it has now to be represented not as the object but as some phenomenon caused in our consciousness by the object. Thus for the true appearance (= appearing) to us of the \emph{object} is substituted through the `objectification' of the appearing as appearance, the appearing to us of an \emph{appearance}, the appearing of a phenomenon caused in us by the object. (The thing to emphasize on the contrary is that the so-called appearance is the appearing of the \emph{object}, that is, we have the nature of the object before us and not only some affection of our consciousness produced by it.)
 
 	It must be observed that the result of this is that there could be no direct perception or consciousness of Reality under any circumstances or any condition of knowing or perceiving; for the whole view is developed entirely from the fact that the object is distinct from our act of knowing it or recognizing it, which distinction must exist in any kind of knowing it or perceiving it. From this error would necessarily result a mere subjective idealism. Reality would become an absolutely unknowable `Thing in Itself', and finally disappear altogether (as with Berkeley) as an hypothesis which we couldn't possibly justified. \citep[\emph{Correspondence with Stout 1904},][796-797]{Cook-Wilson:1926sf}
 \end{quotation}
@@ -189,17 +189,30 @@ Cook Wilson begins by avowing the fundamental realist commitment he shares with 
 
 The first feature of Cook Wilson's realist epistemology is most prominently at play in the third paragraph---that the objects of knowledge are independent of the subject's knowledge of them. But arguably at least, the second and third features of Cook Wilson's epistemology are at play as well. 
 
-So consider Cook Wilson's conception of epistemic warrant as proof. Cook Wilson follows Hobbes in this, and follows Hobbes, as well, in regarding this conception of epistemic warrant as paradigmatically exemplified by Euclidean geometry. Cook Wilson importantly departs from Hobbes in regarding perception as a source of epistemic warrant. The reason for this departure should be obvious from our previous discussion. It is Hobbes' conception of sensory experience, as merely a conscious modification of the perceiving subject, that is the obstacle to regarding perception as a source of a warrant akin to proof. If the conscious phenomenon caused in us by the object can arise from a variety of different causes, then undergoing a conscious affectation would be consistent with the nonexistence of the object that would have otherwise produced it. The very same visual impression of a red ripened tomato could have been produced not by the tomato that actually produced it but by the stimulation of the visual cortex by UCL neuroscientists, say. But if perception is to constitute a warrant akin to proof, perception could not be conceived in this way. If perceptual experience is to afford us proof about its objects, then that experience could not be the way that it in fact is if the propositions provably known on the basis of that experience were false. We see the tomato and are thus knowledgeable about that tomato. We could come to know that the tomato is red just by looking. What we see when we look must be akin to proof of the tomato's color. Our perception of the tomato wouldn't be what it is, the apprehension of the red of the tomato, if the tomato were some other color, orange or green, say. So, if perception is a mode of apprehension, our perceptual experience of the red tomato couldn't be what it is and the proposition that the tomato is red be false. But if perception is a conscious modification of the perceiving subject, then our perceptual experience of the tomato could be what it is and the proposition that the tomato is red be false. On the subjective conception, perceptual appearances fall short of affording us proof of a world without the mind. As \citet{Locke:1706hc} observes, subjective appearances could afford us at most with a ``certainty \ldots\ only as great as our frame can attain to.''
+So consider Cook Wilson's conception of epistemic warrant as proof. Cook Wilson follows Hobbes in this, and follows Hobbes, as well, in regarding this conception of epistemic warrant as paradigmatically exemplified by Euclidean geometry. Cook Wilson importantly departs from Hobbes in regarding perception as a source of epistemic warrant. The reason for this departure should be obvious from our previous discussion. It is Hobbes' conception of sensory experience, as merely a conscious modification of the perceiving subject, that is the obstacle to regarding perception as a source of a warrant akin to proof. If the conscious phenomenon caused in us by the object can arise from a variety of different causes, then undergoing a conscious affectation would be consistent with the nonexistence of the object that would have otherwise produced it. The very same visual impression of a red ripened tomato could have been produced not by the tomato that actually produced it but by the stimulation of the visual cortex by UCL neuroscientists, say. But if perception is to constitute a warrant akin to proof, perception could not be conceived in this way. If perceptual experience is to afford us proof about its objects, then that experience could not be the way that it in fact is if the propositions provably known on the basis of that experience were false. We see the tomato and are thus knowledgeable about that tomato. We could come to know that the tomato is red just by looking. What we see when we look must be akin to proof of the tomato's color. But if perception is a conscious modification of the perceiving subject, then our perceptual experience of the tomato could be what it is and the proposition that the tomato is red be false. On the subjective conception, perceptual appearances fall short of affording us proof of a world without the mind. As \citet{Locke:1706hc} observes, subjective appearances could afford us at most with a ``certainty \ldots\ only as great as our frame can attain to.''
 
-What about the third feature of Cook Wilson's realist epistemology? Knowledge is not constructed out of elements. In this sense is there no theory of knowledge. Whatever else it may entail, a theory of knowledge would at least include conjunctive analyses of knowledge, that is, analyses that take the form of a conjunction of conditions on belief that constitutes knowledge, the kind of account familiar from the \emph{Theaetetus} and post-Gettier epistemology. So Cook Wilson is an anti-hybridist or anti-conjunctivist about knowledge in that knowledge does not consist in a justified belief that meets further external conditions. Knowledge, according to Cook Wilson, is an explanatorily fundamental and irreducible relation to its object. Moreover, this seems to be a more fundamental claim about the genus, apprehension. Apprehension, generally, is an explanatorily fundamental and irreducible relation to its object which exists independently of that apprehension. If that's right, and perception is a species of apprehension, then it would follow straight away that perception is explanatorily fundamental and irreducible relation to its object. Moreover, there is some reason to credit Cook Wilson with this line of thought. Thus Farquehassan claims that Cook Wilson came to regard the theory of perception absurd. If by theory of perception, Cook Wilson means something parallel to the theory of knowledge---such as the view, familiar from \citet{Grice:1962jw} and advocated by \citet{Hobbes:1651fk}, that perception is experience or subjective appearance that meets further external conditions such as being caused or counterfactually covarying in the right sort of way----then that would support the above reasoning. 
+% Our perception of the tomato wouldn't be what it is, the apprehension of the red of the tomato, if the tomato were some other color, orange or green, say. So, if perception is a mode of apprehension, our perceptual experience of the red tomato couldn't be what it is and the proposition that the tomato is red be false. 
 
-But is there another route to anti-conjunctivism about perception? One that flows from the demand that perception makes us knowledgable about its objects? Subjective appearances, if there were any, would be the experiential core common to perception, illusion, and hallucination. Subjective appearances are perceptual when they meet certain external conditions, when they are caused by or counterfactually depend upon, in the right sort of way, their veridical subject matter, say. But the very same subjective appearance could have manifest itself in consciousness as the product of a very different cause. So subjective appearances, of the kind that Cook Wilson is keen to diagnose, would be the experiential core common to all sense experience. So understood, sense experience would have a single common nature, the subjective appearance that constitutes its experiential core. It is thus a kind of experiential monism. Contrast the conception of perception that Cook Wilson advocates. On it, perception is, by its very nature, the apprehension in experience of its object. If the subject undergoes some other sensory experience which is not itself the apprehension of the object (either because it is the apprehension of some other object, or because it is the apprehension of no object at all), then it is not a perception of that object. Since perception essentially involves the apprehension of its object, then any sensory experience that is not an apprehension is not thereby a mode of perception. Far from being a kind of experiential monism, this can seem, instead, to be a kind of experiential pluralism. Perception is one kind of sense experience, the sense experience that the subject undergoes when apprehending in sensation aspects of the natural environment. Non-perceptual experiences, such as hallucinations, in apprehending nothing, must differ in nature from episodes such as perception, which are essentially apprehensions. Sense experience, so conceived, would lack a common experiential nature.
+What about the third feature of Cook Wilson's realist epistemology? Knowledge is not constructed out of elements. In this sense is there no theory of knowledge. Whatever else it may entail, a theory of knowledge would at least include conjunctive analyses of knowledge, that is, analyses that take the form of a conjunction of conditions on belief that constitutes knowledge, the kind of account familiar from the \emph{Theaetetus} and post-Gettier epistemology. So Cook Wilson is an anti-hybridist or anti-conjunctivist about knowledge in that knowledge does not consist in a justified belief that meets further external conditions. Knowledge, according to Cook Wilson, is an explanatorily fundamental and irreducible relation to its object. Moreover, this seems to be a more fundamental claim about the genus, apprehension. Apprehension, generally, is an explanatorily fundamental and irreducible relation to its object which exists independently of that apprehension. If that's right, and perception is a species of apprehension, then it would follow straight away that perception is explanatorily fundamental and irreducible relation to its object. Moreover, there is some reason to credit Cook Wilson with this line of thought. Thus Farquharsan claims that Cook Wilson came to regard the theory of perception absurd. If by theory of perception, Cook Wilson means something parallel to the theory of knowledge---such as the view, familiar from \citet{Grice:1962jw} and advocated by \citet{Hobbes:1651fk}, that perception is experience or subjective appearance that meets further external conditions such as being caused in the right sort of way by its veridical subject matter----then that would support the above reasoning. 
 
-Suppose that perception makes the subject knowledgeable of a mind-independent subject matter. Suppose further that the knowledge the subject is in a position to acquire cannot be explained or constructed out of elements. What must perception be like to make us knowledgeable of the environment in that sense? Must perception itself be non-conjunctive? Unfortunately, while the letter to Stout, especially when read in conjunction with a letter to Prichard written in the same year, has elements that can suggest this, the evidence is ultimately inconclusive. It is likely that Cook Wilson hadn't thought this issue through fully. Nevertheless, let us consider a speculative reason for embracing anti-conjunctivism about perception, one that flows from the demand that perception makes us knowledgable about its objects. Perhaps, if the object of perception is a constituent of the subject's perceptual experience, then some headwa at least, is made in coming up with a perceptual warrant akin to proof. If the potential object of knowledge, being as it actually is, is a constituent of the perceptual experience, since it is the object apprehended in a perceptual act of apprehension, then the perceptual experience wouldn't be as it actually is, the apprehension of that object being as it is, if some observable truth about that object were false. My perception of the tomato wouldn't be the perceptual experience that it is, if the tomato apprehended were green, instead of red, say. It is because the potential object of knowledge is a constituent of the perceptual experience, by being perceptually apprehended, that the subject has a warrant akin to proof about the object of perceptual apprehension.  And perhaps this can be coupled with the further thought that the object apprehended could only be a constituent of the subject's apprehension of it, if apprehension were a fundamental and irreducible relation. As applied to perception, understood as a sensory mode of apprehension, this would result in a kind of experiential pluralism. A hallucination is an experience, but it would differ essentially from a perceptual experience, even one indiscriminable upon reflection from it, in being the apprehension of nothing. (For elaboration and defense of the first thought see \citealt{Kalderon:2011fk}; for elaboration and defense of the second thought see \citealt{Kalderon:2012fk}.)
+But is there another route to anti-conjunctivism about perception? One that flows from the demand that perception makes us knowledgable about its objects? Subjective appearances, if there were any, would be the experiential core common to perception, illusion, and hallucination. Subjective appearances are perceptual when they meet certain external conditions, when they are caused by, or counterfactually depend upon, in the right sort of way, their veridical subject matter, say. But the very same subjective appearance could have manifest itself in consciousness as the product of a very different cause. So subjective appearances, of the kind that Cook Wilson is keen to diagnose, would be the experiential core common to all sense experience. So understood, sense experience would have a single common nature, the subjective appearance that constitutes its experiential core. It is thus a kind of experiential monism. However, subjective appearances could only afford as much certainty as our frame can attain. Contrast the conception of perception that Cook Wilson advocates. On it, perception is, by its very nature, the apprehension in experience of its object. If the subject undergoes some other sensory experience which is not itself the apprehension of the object (either because it is the apprehension of some other object, or because it is the apprehension of no object at all), then it is not a perception of that object. Since perception essentially involves the apprehension of its object, then any sensory experience that is not an apprehension is not thereby a mode of perception. Far from being a kind of experiential monism, this can seem, instead, to be a kind of experiential pluralism. Perception is one kind of sense experience, the sense experience that the subject undergoes when apprehending in sensation aspects of the natural environment. Non-perceptual experiences, such as hallucinations, in apprehending nothing, must differ in nature from episodes such as perception, which are essentially apprehensions. Sense experience, so conceived, would lack a common experiential nature. Could perceptual apprehension, understood as an explanatorily fundamental and irreducible relation, afford us, not as much certainty as our frame can attain, but proof about its object?
+
+Consider a speculative reason for embracing anti-conjunctivism about perception, one that flows from the demand that perception makes us knowledgable about its objects. Perhaps, if the object of perception is a \emph{constituent} of the subject's perceptual experience, then some headway, at least, is made in coming up with a perceptual warrant akin to proof. If the potential object of knowledge, being as it actually is, is a constituent of the perceptual experience, since it is the object apprehended in a perceptual act of apprehension, then the perceptual experience wouldn't be as it actually is, the apprehension of that object being as it is, if some observable truth about that object were false. My perception of the tomato wouldn't be the perceptual experience that it is, if the tomato apprehended were green, instead of red, say. It is because the potential object of knowledge is a constituent of the perceptual experience, by being perceptually apprehended, that the subject has a warrant akin to proof about the object of perceptual apprehension. And perhaps this can be coupled with the further thought that the object apprehended could only be a constituent of the subject's apprehension of it, in a manner that would have this epistemic significance, if apprehension were an explanatorily fundamental and irreducible relation. As applied to perception, understood as a sensory mode of apprehension, this would result in a kind of experiential pluralism. A hallucination would be an experience, but it would differ essentially from a perceptual experience, even one indiscriminable upon reflection from it, in being the apprehension of nothing. (For elaboration and defense of the first thought see \citealt{Kalderon:2011fk}; for elaboration and defense of the second thought see \citealt{Kalderon:2012fk}.)
 
 One obstacle to Cook Wilson's thinking clearly through this may have been his adherence to the accretion. Consider the following argument of Prichard's \citeyearpar[11]{Prichard:1938ve}. Suppose a ripe tomato is in plain view of a subject, and that the subject can recognize as a tomato the fruit that they see. It might seem that what the subject thus apprehends is incompatible with there not being a tomato before them. In which case, perception affords the subject something akin to proof of the tomato's presence. In this way, perception can seem to make the subject knowledgeable of a mind-independent subject matter. Prichard's insight is that this picture is incompatible with a further feature of Cook Wilson's conception of knowledge, \emph{the accretion}. According to the accretion, if the subject knows that \emph{p}, the subject can know upon reflection that they know that \emph{p}. And if the subject has some attitude other than knowledge to that proposition, then the subject can know upon reflection that their attitude is something other than knowledge. Knowledge admits of no ringers---a state indiscriminable upon reflection from knowledge just is knowledge. What would it take for perception to make us knowledgeable of a mind-independent subject matter if there are no ringers for knowledge? If the subject's seeing the tomato makes them knowledgeable of the tomato's presence, then the subject must recognize that what they apprehends in seeing the tomato is incompatible with the tomato's absence. But is the subject in seeing the tomato in a position to recognize that? After all, there are situations indiscriminable upon reflection from seeing a tomato that does not involve the tomato's presence. The subject's hallucination of the scene would be indiscriminable upon reflection from their perceiving it. If what the subject apprehends in seeing the tomato is not discriminable upon reflection from what, if anything, they apprehend in hallucinating the tomato, then it could seem that they are not in a position to recognize that what they apprehend in seeing the tomato is incompatible with the tomato's absence. They would lack proof of a tomato before them. Thus Prichard concludes that since perception admits of ringers, it could not be a source of ringerless knowledge.
 
-This argument reveals a tension within the Oxford realism inaugurated by Cook Wilson. If Cook Wilson was right in claiming that the objects of knowledge are mind-independent, and the objects of perception are at least potential objects of knowledge, then these claims can only be sustained by abandoning the accretion. Indeed, it is telling that \citet{Austin:1962lr} jettison's just this feature of Cook Wilson's epistemology. \citet{Prichard:1938ve} will retain the accretion and abandon perceptual realism, whereas \citet{Austin:1962lr} will retain perceptual realism and abandon the accretion \citep[see][for discussion]{Kalderon:2010fk}. The insight moving each was that the accretion is inconsistent with perception affording knowledge of a world without the mind if this involves the possession of something akin to proof. So it is possible that the anti-conjunctivist implications of Cook Wilson's conception of perception are only fully made explicit in subsequent developments of this tradition despite itself, particularly in the work of \citet{Prichard:1938ve}, \citet{Austin:1962lr}, and \cite{Hinton:1973js}.
+This argument reveals a tension within the Oxford realism inaugurated by Cook Wilson. If Cook Wilson was right in claiming that the objects of knowledge are mind-independent, and the objects of perception are at least potential objects of knowledge, then these claims can only be sustained by abandoning the accretion. Indeed, it is telling that \citet{Austin:1962lr} jettison's just this feature of Cook Wilson's epistemology. 
+
+Against Ayer's \citeyearpar{Ayer:1958kx} claim that there is a type of sentence, an observation sentence, that represents how things appear in a subject's experience, that can be incorrigibly known to be true by the subject independently of the occasion of his expressing this knowledge, \citet{Austin:1962lr} insists that the truth of a claim is only determined by the standards in play on the occasion of utterance. If as Austin maintains, a sentence is only true when uttered on an occasion, there could be no sentence that is true independent of an occasion of utterance, and, hence, no such sentence could be incorrigibly known to be true. While no sentence can be incorrigibly known to be true independent of an occasion of utterance, that's not to say that there are no occasions where a subject can speak with certainty. But recognizing that there are occasions where things can be incorrigibly known undermines the thought that what can be incorrigibly known is restricted to reports about how things appear in sense experience. 
+% :
+% \begin{quote}
+%     \ldots\ it may be said, even if such cautious formulae are not \emph{intrinsically} incorrigible, surely there will be plenty of cases in which what we say by their utterance will \emph{in fact} be incorrigible \ldots\ Well, yes, no doubt this is true. But then exactly the same thing is true of utterances in which quite different forms of word are employed \ldots\ if I watch for some time an animal a few feet in front of me, in a good light, if I prod it perhaps, and sniff, and take note of the noises it makes, I may say, `That’s a pig’; and this too will be `incorrigible’, nothing could be produced that would show that I had made a mistake. \citep[114--5]{Austin:1962lr}
+% \end{quote}
+If circumstances are propitious, a subject can just know that there is a pig before them by seeing the pig. Seeing the pig and recognizing as a pig the animal that they see is incompatible with the pig's absence and so tantamount to proof of the pig's presence. So a subject can know there's a pig and can express this knowledge by saying ``There's a pig''. This is not undermined by there being other circumstances or other occasions where the very same sentence could be used to say something false and so fail to express knowledge. That there are other possible circumstances where a subject would speak falsely and fail to express knowledge (because they were hallucinating, say) is consistent with the subject, in the present circumstances, speaking truly and expressing knowledge of a pig before them. 
+
+According to the accretion, that there are possible circumstances, where one lacks proof of what's ostensibly known, indiscriminable upon reflection from one's present circumstances, means that one lacks proof, and hence knowledge, in present circumstances, as well. Against this, Austin is insisting that one can have proof of a pig before one simply by seeing it, and that this is not undermined by there being other possible circumstances---such as seeing a hyperrealistic animatronic pig, or by having one's visual cortex appropriately stimulated by UCL neuroscientists, say---where one lacks such proof, even if these circumstances would be indiscriminable upon reflection from one's present circumstances.
+
+\citet{Prichard:1938ve} retains the accretion and abandons perceptual realism, whereas \citet{Austin:1962lr} retains perceptual realism and abandons the accretion \citep[see][for discussion]{Kalderon:2010fk}. The insight moving each was that the accretion is inconsistent with perception affording knowledge of a world without the mind if this involves the possession of something akin to proof. So it is possible that the anti-conjunctivist implications of Cook Wilson's conception of perception are only fully made explicit in subsequent developments of this tradition despite itself, particularly in the work of \citet{Prichard:1938ve}, \citet{Austin:1962lr}, and \cite{Hinton:1973js}.
 
 % section appearance (end)
 
