--- a/realappearance.tex
+++ b/realappearance.tex
@@ -101,7 +101,7 @@ Notoriously, there is a fourth feature, what Travis describes as \emph{the accre
 Let's review these in turn.
 
 \begin{enumerate}[(1)]
-	\item First is the fundamental realist commitment common to Cook Wilson and \citet{Moore:1903uo}\----that the objects of knowledge are independent of the subject's knowledge of them. Suppose, as the Balliol man in the ragged scholar's gown contends, that seeing something in plain view can, in propitious circumstances, put you in a position to know various things about it. So you can know that the table is there just where you see it. The table is the object of your knowledge in the sense that you can know something about \emph{it}---about its age, shape height, relative position, color, material composition, design, state of repair, and so on. According to the fundamental realist commitment, the table is the object of a subject's knowledge only insofar as it exists independently of the subject's knowledge of it. The object of knowledge must be independent of the subjects knowledge of it, if coming to know is to be a genuine discovery:
+	\item First is the fundamental realist commitment common to Cook Wilson and \citet{Moore:1903uo}\----that the objects of knowledge are independent of the subject's knowledge of them. Suppose, as the Balliol man in the ragged scholar's gown contends, that seeing something in plain view can, in propitious circumstances, put you in a position to know various things about it. So you can know that the table is there just where you see it. The table is the object of your knowledge in the sense that you can know something about \emph{it}---about its age, shape, height, relative position, color, material composition, design, state of repair, and so on. According to the fundamental realist commitment, the table is the object of a subject's knowledge only insofar as it exists independently of the subject's knowledge of it. The object of knowledge must be independent of the subjects knowledge of it, if coming to know is to be a genuine discovery:
 		\begin{quote}
 			You can no more act upon the object by knowing it than you can `please the Dean and Chapter by stroking to dome of St. Paul's'. The man who first discovered that equable curvature meant equidistance from a point didn't supposed that he `produced' the truth---that absolutely contradicts the idea of truth---nor that he changed the nature of the circle or curvature, or of the straight line, or of anything spatial. \citep[\emph{Correspondence with Prichard 1904},][802]{Cook-Wilson:1926sf}
 		\end{quote}
@@ -203,11 +203,10 @@ One obstacle to Cook Wilson's thinking clearly through this may have been his ad
 
 This argument reveals a tension within the Oxford realism inaugurated by Cook Wilson. If Cook Wilson was right in claiming that the objects of knowledge are mind-independent, and the objects of perception are at least potential objects of knowledge, then these claims can only be sustained by abandoning the accretion. Indeed, it is telling that \citet{Austin:1962lr} jettison's just this feature of Cook Wilson's epistemology. 
 
-Against Ayer's \citeyearpar{Ayer:1958kx} claim that there is a type of sentence, an observation sentence, that represents how things appear in a subject's experience, that can be incorrigibly known to be true by the subject independently of the occasion of his expressing this knowledge, \citet{Austin:1962lr} insists that the truth of a claim is only determined by the standards in play on the occasion of utterance. If as Austin maintains, a sentence is only true when uttered on an occasion, there could be no sentence that is true independent of an occasion of utterance, and, hence, no such sentence could be incorrigibly known to be true. While no sentence can be incorrigibly known to be true independent of an occasion of utterance, that's not to say that there are no occasions where a subject can speak with certainty. But recognizing that there are occasions where things can be incorrigibly known undermines the thought that what can be incorrigibly known is restricted to reports about how things appear in sense experience. 
-% :
-% \begin{quote}
-%     \ldots\ it may be said, even if such cautious formulae are not \emph{intrinsically} incorrigible, surely there will be plenty of cases in which what we say by their utterance will \emph{in fact} be incorrigible \ldots\ Well, yes, no doubt this is true. But then exactly the same thing is true of utterances in which quite different forms of word are employed \ldots\ if I watch for some time an animal a few feet in front of me, in a good light, if I prod it perhaps, and sniff, and take note of the noises it makes, I may say, `That’s a pig’; and this too will be `incorrigible’, nothing could be produced that would show that I had made a mistake. \citep[114--5]{Austin:1962lr}
-% \end{quote}
+Against Ayer's \citeyearpar{Ayer:1958kx} claim that there is a type of sentence, an observation sentence, that represents how things appear in a subject's experience, that can be incorrigibly known to be true by the subject independently of the occasion of his expressing this knowledge, \citet{Austin:1962lr} insists that the truth of a claim is only determined by the standards in play on the occasion of utterance. If as Austin maintains, a sentence is only true when uttered on an occasion, there could be no sentence that is true independent of an occasion of utterance, and, hence, no such sentence could be incorrigibly known to be true. While no sentence can be incorrigibly known to be true independent of an occasion of utterance, that's not to say that there are no occasions where a subject can speak with certainty. But recognizing that there are occasions where things can be incorrigibly known undermines the thought that what can be incorrigibly known is restricted to reports about how things appear in sense experience:
+\begin{quote}
+    \ldots\ it may be said, even if such cautious formulae are not \emph{intrinsically} incorrigible, surely there will be plenty of cases in which what we say by their utterance will \emph{in fact} be incorrigible \ldots\ Well, yes, no doubt this is true. But then exactly the same thing is true of utterances in which quite different forms of word are employed \ldots\ if I watch for some time an animal a few feet in front of me, in a good light, if I prod it perhaps, and sniff, and take note of the noises it makes, I may say, `That’s a pig’; and this too will be `incorrigible’, nothing could be produced that would show that I had made a mistake. \citep[114--5]{Austin:1962lr}
+\end{quote}
 If circumstances are propitious, a subject can just know that there is a pig before them by seeing the pig. Seeing the pig and recognizing as a pig the animal that they see is incompatible with the pig's absence and so tantamount to proof of the pig's presence. So a subject can know there's a pig and can express this knowledge by saying ``There's a pig''. This is not undermined by there being other circumstances or other occasions where the very same sentence could be used to say something false and so fail to express knowledge. That there are other possible circumstances where a subject would speak falsely and fail to express knowledge (because they were hallucinating, say) is consistent with the subject, in the present circumstances, speaking truly and expressing knowledge of a pig before them. 
 
 According to the accretion, that there are possible circumstances, where one lacks proof of what's ostensibly known, indiscriminable upon reflection from one's present circumstances, means that one lacks proof, and hence knowledge, in present circumstances, as well. Against this, Austin is insisting that one can have proof of a pig before one simply by seeing it, and that this is not undermined by there being other possible circumstances---such as seeing a hyperrealistic animatronic pig, or by having one's visual cortex appropriately stimulated by UCL neuroscientists, say---where one lacks such proof, even if these circumstances would be indiscriminable upon reflection from one's present circumstances.
